auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_ptr_subtraction.c
struct s;

extern struct s *ptr;

int main(void) {
  
  return (ptr - ptr) == 0;
}